fix album flex-box misalignment when the album title is too long
Tell album-metadata to submit to the sizing of the album cover using;
* flex-basis: min-content;

--- a/src/styles/components/AlbumIndividual.scss
+++ b/src/styles/components/AlbumIndividual.scss
@@ -18,6 +18,7 @@
 
             .album-side {
                 flex-grow: 1;
+                flex-basis: min-content;
                 padding: 0px 80px;
 
                 @media (max-width: 1400px) {
@@ -74,7 +75,7 @@
         p {
             color: $text-color;
             text-transform: capitalize;
-            @include text-overflow-ellipsis();
+            // @include text-overflow-ellipsis();
         }
 
         h2 {
